application is now working after importing minio certificate into java truststore

--- a/spark/sample-code/Dockerfile
+++ b/spark/sample-code/Dockerfile
@@ -10,4 +10,11 @@ RUN pip3 install pyspark==3.3.2
 ADD https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar $SPARK_HOME/jars
 ADD https://repo1.maven.org/maven2/org/apache/spark/spark-avro_2.12/3.3.2/spark-avro_2.12-3.3.2.jar $SPARK_HOME/jars
 
+# Copy certificate for Tenant01 Minio
+COPY tenant01.crt /etc/ssl/certs/tenant01.crt
+
+# Import certificate into Java keystore
+RUN yes | keytool -v -import -trustcacerts -file /etc/ssl/certs/tenant01.crt -alias tenant-tls -storepass changeit -cacerts
+
+# Copy application code
 COPY src/*.py .
